--- a/Assignment_Chapter_04/Chapter-04-assignment.Rmd
+++ b/Assignment_Chapter_04/Chapter-04-assignment.Rmd
@@ -52,16 +52,46 @@ precis( m4.1 )
 # For 03/24/16
 
 ## 4E4
-
+line 2
 ## 4E5
+Three: α,β,and σ
 
 ## 4M3
+yi ~Normal(μ,σ)
+μi= α + βxi
+α~Normal(0, 50)
+β~Normal(0, 10)
+σ~Uniform(0, 50)
 
 ## 4M4
+hi=height
+xi=year
+
+hi ~Normal(μi,σ)
+μi= α + βxi
+α~Normal(178, 100)
+β~Normal(0, 10)
+σ~Uniform(0, 50)
 
 ## 4M5
+hi ~Normal(μi,σ)
+μi= α + βxi
+α~Normal(120, 100)
+β~Normal(10, 10)
+σ~Uniform(0, 50)
+
+Center α around the mean given from the first year instead.
+
+Assume that there is some positive effect between year and height, so change from a 0 prior for β's mean to 10.
 
 ## 4M6
+hi ~Normal(μi,σ)
+μi= α + βxi
+α~Normal(120, 64)
+β~Normal(10, 10)
+σ~Uniform(0, 50)
+
+I would change the prior for α's variance to 64.
 
 # For 03/31/16
 
