--- a/Assignment_Chapter_04/Chapter-04-assignment.Rmd
+++ b/Assignment_Chapter_04/Chapter-04-assignment.Rmd
@@ -113,6 +113,139 @@ I would change the prior for α's variance to 64.
 
 ## 4H1
 
+```{r}
+# load data
+library(rethinking)
+data(Howell1)
+d <- Howell1
+
+# fit model linear regression
+m1 <- map(
+alist(
+height ~ dnorm( mu , sigma ) ,
+mu <- a + b*weight ,
+a ~ dnorm( 156 , 100 ) ,
+b ~ dnorm( 0 , 10 ) ,
+sigma ~ dunif( 0 , 50 )
+) ,
+data=d)
+
+#plot
+plot( height ~ weight , data=d )
+abline( a=coef(m1)["a"] , b=coef(m1)["b"] )
+
+#sample
+
+post <- extract.samples(m1)
+
+#Prediction
+weight.seq <- c(46.95, 43.72, 64.78, 32.59, 54.63)
+mu <- link( m1 , data=data.frame(weight=weight.seq) )
+
+mu.mean <- apply( mu , 2 , mean )
+mu.HPDI <- apply( mu , 2 , HPDI , prob=0.89 )
+mu.mean
+mu.HPDI[,1]
+mu.HPDI[,2]
+mu.HPDI[,3]
+mu.HPDI[,4]
+mu.HPDI[,5]
+```
+
+
 ## 4H2
 
+#A
+
+```{r}
+# load data
+library(rethinking)
+data(Howell1)
+d <- Howell1
+d2=d[d$age < 18, ]
+nrow(d2)
+
+# fit model linear regression
+m2 <- map(
+alist(
+height ~ dnorm( mu , sigma ) ,
+mu <- a + b*weight ,
+a ~ dnorm( 100 , 100 ) ,
+b ~ dnorm( 0 , 10 ) ,
+sigma ~ dunif( 0 , 50 )
+) ,
+data=d2)
+
+#estimates
+precis( m2 )
+```
+
+The slope is parameter b in the table. For every 10 units of increase in weight a child gets about 27cm taller.
+
+#B
+
+```{r}
+#sample
+weight.seq <- seq(0, 40, by=1)
+
+post <- extract.samples(m2)
+
+mu <- link( m2 , data=data.frame(weight=weight.seq) )
+
+mu.mean <- apply( mu , 2 , mean )
+mu.HPDI <- apply( mu , 2 , HPDI , prob=0.89 )
+
+
+#plot
+plot( height ~ weight , data=d2 , col=col.alpha(rangi2,0.5) )
+lines( weight.seq , mu.mean )
+shade( mu.HPDI , weight.seq )
+
+sim.height <- sim(m2, data = list(weight=weight.seq))
+height.PI <- apply(sim.height, 2, PI, prob=0.89)
+shade(height.PI, weight.seq)
+```
+
+#C
+
+The model might be better fit with a curve instead of linear regression.
+
 ## 4H3
+
+#A
+
+```{r}
+# load data
+library(rethinking)
+data(Howell1)
+d <- Howell1
+
+# fit model linear regression
+logweight=log(d$weight)
+
+m3 <- map(
+alist(
+height ~ dnorm( mu , sigma ) ,
+mu <- a + b*logweight ,
+a ~ dnorm( 156 , 100 ) ,
+b ~ dnorm( 0 , 10 ) ,
+sigma ~ dunif( 0 , 50 )
+) ,
+data=d)
+
+precis(m3)
+#plot
+plot( height ~ logweight , data=d )
+
+
+```
+
+#B
+
+```{r}
+plot( height ~ weight , data=Howell1 ,
+col=col.alpha(rangi2,0.4) )
+
+
+```
+
