--- a/Assignment_Chapter_05/Chapter-05-part1-assignment.Rmd
+++ b/Assignment_Chapter_05/Chapter-05-part1-assignment.Rmd
@@ -38,6 +38,7 @@ Drinking whole fat milk is correlated with lower levels of obsesity. However, ch
 Those that get divorced proably also will remarry more often. Take into account how many times the person has been married.
 
 ## 5M4
+```{r}
 library(rethinking)
 data(WaffleDivorce)
 setwd("C:/Users/Jessica/Documents/Rclub-rethinking_Jessica.Tucci/Assignment_Chapter_05")
@@ -51,7 +52,7 @@ lds_marriage$Marriage.s <- (lds_marriage$Marriage - mean(lds_marriage$Marriage))
 
 lds_marriage$MedianAgeMarriage.s <- (lds_marriage$MedianAgeMarriage - mean(lds_marriage$MedianAgeMarriage))/sd(lds_marriage$MedianAgeMarriage)
 
-lds_marriage$percent_lds.s <- (LDS_marriage$percent_lds - mean(lds_marriage$percent_lds))/sd(lds_marriage$percent_lds)
+lds_marriage$percent_lds.s <- (lds_marriage$percent_lds - mean(lds_marriage$percent_lds))/sd(lds_marriage$percent_lds)
 
 #create a model
 
@@ -67,5 +68,7 @@ model_lds <- map(
     ) ,
     data = lds_marriage)
 precis(model_lds)
+```
+
 
 
