--- a/Assignment_Chapter_08/Chapter 8.Rmd
+++ b/Assignment_Chapter_08/Chapter 8.Rmd
@@ -32,3 +32,146 @@ The limiations to Gibbs are that it requires the use of conjugate priors and as 
 HMC requires continuous parameters and can not handle discrete parameters, this is because it works by running over the data continuously and spending more time on areas where it is more likely.
 
 
+#8E4. Explain the difference between the effective number of samples, n_eff as calculated by Stan,and the actual number of samples.
+
+The effective number of samples is an estimate of the number of independent samples you managed to get from the posterior distribution.The effective number of samples matters more than the raw number of samples, as typically Markov chains are autocorrelated. (sequential samples are not independent)
+
+#8E5. Which value should Rhat approach, when a chain is sampling the posterior distribution correctly?
+
+1
+
+#8E6. Sketch a good trace plot for a Markov chain, one that is effectively sampling from the posterior distribution. What is good about its shape? Then sketch a trace plot for a malfunctioning Markov chain. What about its shape indicates malfunction?
+
+
+##Medium.
+
+
+#8M1. Re-estimate the terrain ruggedness model from the chapter, but now using a uniform prior and an exponential prior for the standard deviation, sigma. The uniform prior should be dunif(0,10) and the exponential should be dexp(1). Do the different priors have any detectible influence on the posterior distribution?
+
+```{r}
+library(rethinking)
+data(rugged)
+d <- rugged
+d$log_gdp <- log(d$rgdppc_2000)
+dd <- d[ complete.cases(d$rgdppc_2000) , ]
+
+dd.trim <- dd[ , c("log_gdp","rugged","cont_africa") ]
+str(dd.trim)
+
+m8.1stan_uniform <- map2stan( 
+                      alist(
+                        log_gdp ~ dnorm( mu , sigma ) ,
+                        mu <- a + bR*rugged + bA*cont_africa + bAR*rugged*cont_africa ,
+                        a ~ dnorm(0,100),
+                        bR ~ dnorm(0,10),
+                        bA ~ dnorm(0,10),
+                        bAR ~ dnorm(0,10),
+                        sigma ~ dunif(0,10)
+                      ) ,
+                      data=dd.trim )
+
+m8.1stan_exp <- map2stan( 
+                      alist(
+                        log_gdp ~ dnorm( mu , sigma ) ,
+                        mu <- a + bR*rugged + bA*cont_africa + bAR*rugged*cont_africa ,
+                        a ~ dnorm(0,100),
+                        bR ~ dnorm(0,10),
+                        bA ~ dnorm(0,10),
+                        bAR ~ dnorm(0,10),
+                        sigma ~ dexp(1)
+                      ) ,
+                      data=dd.trim )
+
+
+precis(m8.1stan_uniform)
+
+precis(m8.1stan_exp)
+
+```
+
+
+#8M2. The Cauchy and exponential priors from the terrain ruggedness model are very weak. They can be made more informative by reducing their scale. Compare the dcauchy and dexp priors for progressively smaller values of the scaling parameter. As these priors become stronger, how does each influence the posterior distribution?
+
+```{r}
+#cauchy original
+m8.1stan <- map2stan( 
+                      alist(
+                        log_gdp ~ dnorm( mu , sigma ) ,
+                        mu <- a + bR*rugged + bA*cont_africa + bAR*rugged*cont_africa ,
+                        a ~ dnorm(0,100),
+                        bR ~ dnorm(0,10),
+                        bA ~ dnorm(0,10),
+                        bAR ~ dnorm(0,10),
+                        sigma ~ dcauchy(0,2)
+                      ) ,
+                      data=dd.trim )
+precis(m8.1stan)
+
+#cauchy stricter prior
+m8.1stan2 <- map2stan( 
+                      alist(
+                        log_gdp ~ dnorm( mu , sigma ) ,
+                        mu <- a + bR*rugged + bA*cont_africa + bAR*rugged*cont_africa ,
+                        a ~ dnorm(0,100),
+                        bR ~ dnorm(0,10),
+                        bA ~ dnorm(0,10),
+                        bAR ~ dnorm(0,10),
+                        sigma ~ dcauchy(0,1)
+                      ) ,
+                      data=dd.trim )
+precis(m8.1stan2)
+
+#exp original
+precis(m8.1stan_exp)
+#exp stricter prior
+m8.1stan_exp <- map2stan( 
+                      alist(
+                        log_gdp ~ dnorm( mu , sigma ) ,
+                        mu <- a + bR*rugged + bA*cont_africa + bAR*rugged*cont_africa ,
+                        a ~ dnorm(0,100),
+                        bR ~ dnorm(0,10),
+                        bA ~ dnorm(0,10),
+                        bAR ~ dnorm(0,10),
+                        sigma ~ dexp(0.5)
+                      ) ,
+                      data=dd.trim )
+
+
+precis(m8.1stan_uniform)
+
+precis(m8.1stan_exp)
+```
+
+
+#8M3. Re-estimate one of the Stan models from the chapter, but at different numbers of warmup iterations. Be sure to use the same number of sampling iterations in each case. Compare the n_eff values. How much warmup is enough?
+
+```{r}
+#original example from chapter
+y <- rnorm( 100 , mean=0 , sd=1 )
+m8.5 <- map2stan( 
+alist(
+y ~ dnorm( mu , sigma ) ,
+mu <- a1 + a2 ,
+a1 ~ dnorm( 0 , 10 ) ,
+a2 ~ dnorm( 0 , 10 ) ,
+sigma ~ dcauchy( 0 , 1 )
+) ,
+data=list(y=y) , start=list(a1=0,a2=0,sigma=1) ,
+chains=2 , iter=4000 , warmup=1000 )
+precis(m8.5)
+
+#less warmup
+m8.5_lesswarmup <- map2stan( 
+alist(
+y ~ dnorm( mu , sigma ) ,
+mu <- a1 + a2 ,
+a1 ~ dnorm( 0 , 10 ) ,
+a2 ~ dnorm( 0 , 10 ) ,
+sigma ~ dcauchy( 0 , 1 )
+) ,
+data=list(y=y) , start=list(a1=0,a2=0,sigma=1) ,
+chains=2 , iter=4000 , warmup=500 )
+precis(m8.5)
+precis(m8.5_lesswarmup)
+```
+
